fixed jumps of  wallet balance modal

--- a/src/components/WalletLink/WalletLink.module.scss
+++ b/src/components/WalletLink/WalletLink.module.scss
@@ -11,6 +11,8 @@
 
 .etherscanLink {
   @include text('body-3');
+
+  display: inline-block;
 }
 
 .link {
